# cmrcp

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: CMakeLists.txt  cmrpcapplication.h  cmrpcconfig.h  cmrpccontroller.h  lockqueue.h  logger.h
src/: CMakeLists.txt  cmrpcapplication.cc  cmrpcchannel.cc  cmrpcconfig.cc  cmrpccontroller.cc  logger.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: cmrpcchannel.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main  main.cc  makefile  test.pb.cc  test.pb.h  test.proto
